# triz-ai-patent-assistant

./: LICENSE  README.md  generate_formula.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml
docs/: coverage_summary.txt  index.md  instruction_prompt.md  leaderboard.md  sample_ru.txt  technical_spec_improvements.md  triz_system_design.md
docs/web/: index.html  main.js  style.css
triz_ai/: __init__.py  ariz.py  assess_patentability.py  check_novelty.py  claim_validator.py  cli.py  drawing_mapper.py  generate_formula.py  ipc_classifier.py  prompt_enhancer.py  run_benchmark.py  run_tests.py  security_utils.py  streamlit_app.py  test_generate_formula.py  test_prompt_enhancer.py  triz_system.py
web/: index.html  main.js  style.css
