[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triz-ai-patent-assistant"
version = "0.1.3"
description = "AI-assisted TRIZ patent analysis toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Sergei Voronin"}]

[project.scripts]
triz-ai = "triz_ai.cli:main"
