[build-system]
# Use setuptools_scm to derive the version from Git tags.  The
# ``toml`` extra is required to read configuration from this pyproject.
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "triz-ai-patent-assistant"
# The version is derived automatically from the most recent Git tag using
# setuptools_scm.  See [tool.setuptools_scm] for configuration.
dynamic         = ["version"]
description     = "AI‑assisted TRIZ patent analysis toolkit"
readme          = "README.md"          # <‑‑ Появилась эта строка
requires-python = ">=3.8"
license         = {text = "MIT"}
authors         = [
  { name = "Sergei Voronin", email = "voroninsergeiai@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "openai>=1.0.0",   # пример
  "mkdocs>=1.5.3",
  "rich>=13.5.2",
]

[project.urls]
Homepage        = "https://github.com/voroninsergei/triz-ai-patent-assistant"
Documentation   = "https://voroninsergei.github.io/triz-ai-patent-assistant/"
Source          = "https://github.com/voroninsergei/triz-ai-patent-assistant"
Issues          = "https://github.com/voroninsergei/triz-ai-patent-assistant/issues"
PyPI            = "https://pypi.org/project/triz-ai-patent-assistant/"

[tool.setuptools.package-data]
# включает все .md, .txt и .json из пакета
"triz_ai" = ["*.md", "*.txt", "*.json"]

# Configure setuptools_scm to derive the package version from Git tags.
# ``version_scheme = "post-release"`` produces versions like ``1.2.3`` for
# exact tags and ``1.2.3.postN`` for commits after the tag.  ``local_scheme``
# is disabled to avoid including local identifiers in the version string.
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
